add interactive map

--- a/single.html
+++ b/single.html
@@ -463,18 +463,18 @@
                 </div>
             </div>
             <div class="container d-flex">
-
                 <div class="part_left">
                     <ul class="section-map__list-location">
-                        <li class="section-map__item"><a href="#">Автовокзал</a></li>
-                        <li class="section-map__item"><a href="#">Парк</a></li>
-                        <li class="section-map__item"><a href="#">Дитячий садок №70 “Мадагаскар”</a></li>
-                        <li class="section-map__item"><a href="#">СЗШ №32,86</a></li>
-                        <li class="section-map__item"><a href="#">Спортивний комплекс «Формула краси»</a></li>
-                        <li class="section-map__item"><a href="#">ТРЦ «King Kros Leopolis» з ресторанами та кафе</a>
+                        <li class="section-map__item" data-marker="data-busStation"><a href="#">Автовокзал</a></li>
+                        <li class="section-map__item" data-marker="data-park"><a href="#">Парк</a></li>
+                        <li class="section-map__item" data-marker="data-school1"><a href="#">Дитячий садок №70 “Мадагаскар”</a></li>
+                        <li class="section-map__item" data-marker="data-school2"><a href="#">СЗШ №32,86</a></li>
+                        <li class="section-map__item" data-marker="data-gym"><a href="#">Спортивний комплекс «Формула краси»</a></li>
+                        <li class="section-map__item" data-marker="data-shop"><a href="#">ТРЦ «King Kros Leopolis» з ресторанами та кафе</a>
                         </li>
                     </ul>
                 </div>
+
                 <div class="part_right">
                     <div id="wrap_maps" class="section-map__wrap-maps"></div>
                 </div>
